# sdc_cpp_ui_engine

./: .gitmodules  CMakeLists.txt  Makefile  Makefile copy  app
include/: app.h  button.h  color.h  container.h  event_manager.h  fit_container.h  input_object.h  label.h  log.h  object.h  object_manager.h  order_container.h  rect_style.h  signal_manager.h  signal_object.h  signals.h  simple_button.h  style.h  style_manager.h  text_input.h  utils.h  vec2.h  veci2.h
src/: app.cpp  button.cpp  color.cpp  container.cpp  event_manager.cpp  fit_container.cpp  input_object.cpp  label.cpp  log.cpp  main.cpp  object.cpp  object_manager.cpp  order_container.cpp  rect_style.cpp  signal_manager.cpp  signal_object.cpp  simple_button.cpp  style.cpp  style_manager.cpp  utils.cpp  vec2.cpp  veci2.cpp
